<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/started"
            />
        <TextView android:id="@+id/report_startedTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/latitude"
            />
        <TextView android:id="@+id/report_latitudeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/longitude"
            />
        <TextView android:id="@+id/report_longitudeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/altitude"
            />
        <TextView android:id="@+id/report_altitudeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5sp"
            android:text="@string/elapsed_time"
            />
        <TextView android:id="@+id/report_durationTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />
    </TableRow>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/report_startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            />
        <Button android:id="@+id/report_stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"
            />
        <Button android:id="@+id/report_mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            />
    </LinearLayout>
</TableLayout>
